# wxparaver

./: .gitignore  AUTHORS  Makefile.am  README  README-DEEP.md  advancedsaveconfiguration.cpp  advancedsaveconfiguration.h  app_edit.xpm  arrow_down.xpm  arrow_right.xpm  arrow_up.xpm  bootstrap-and-dist  config.h.in  configure.ac  connection.cpp  connection.h  copypaste.cpp  copypaste.h  cut_trace.xpm  cutfilterdialog.cpp  cutfilterdialog.h  delete.xpm  derived_add.xpm  derived_controlled_add.xpm  derived_controlled_clear_by.xpm  derived_controlled_maximum.xpm  derived_different.xpm  derived_divide.xpm  derived_maximum.xpm  derived_minimum.xpm  derived_product.xpm  derived_substract.xpm  derivedtimelinedialog.cpp  derivedtimelinedialog.h  dialogStrip.txt  eventsselectiondialog.cpp  eventsselectiondialog.h  exitdialog.h  file_browser.xpm  filebrowserbutton.cpp  (+65 more)
dialogblocks/: wxparaver_controls.cst
docs/: dimemas-wrapper.sh  paraload-v1.0.sig  paraload-v2.0.sig  paraload.sig  paramedir  paramedir.mn3-mt  prvstats-wrapper.sh  stats-wrapper.sh  workspaces.xml  wxparaver  wxparaver.bat  wxparaver.mn3-mt  wxparaver.mt  wxparaver.sh
docs/quick_reference/: wxparaver.quickreference.html
docs/wxparaver_help_contents/: README
docs/wxparaver_help_contents/install/html/1.quick_reference/: index.html
docs/wxparaver_help_contents/install/html/2.paraver_toolset/: index.html
docs/wxparaver_help_contents/sphinx/2.paraver_toolset/: Makefile  remake.sh  rst2html.sh  rst2man.sh
docs/wxparaver_help_contents/sphinx/2.paraver_toolset/source/: conf.py  paraver_toolset.quick_reference.rst
icons/: Makefile.am  app_edit.xpm  arrow_inverse.xpm  arrow_left.xpm  autoredraw_refresh.xpm  caution.xpm  caution_yellow.xpm  delete.xpm  derived_add.xpm  derived_controlled_average.xpm  derived_controlled_enumerate.xpm  derived_controlled_template.xpm  derived_different.xpm  derived_divide.xpm  derived_maximum.xpm  derived_minimum.xpm  derived_product.xpm  download.xpm  fix_columns_sort.xpm  help.xpm  histo_horvert.xpm  histo_sort.xpm  histo_sum.xpm  inclusive.xpm  information.xpm  logout.xpm  open3d.xpm  opendata.xpm  report_add.xpm  report_disk.xpm  run_script.xpm  semantic_color.xpm  short_labels.xpm  three_dots.xpm  window_properties.xpm
include/: Makefile.am  advancedsaveconfiguration.h  autosessionmanager.h  connection.h  copypaste.h  cutfilterdialog.h  derivedtimelinedialog.h  eventsselectiondialog.h  exitdialog.h  filebrowserbutton.h  filedialogext.h  finddialog.h  ghistogram.h  gtimeline.h  helpcontents.h  histogramdialog.h  histotablebase.h  loadcfgdialog.h  paravermain.h  pg_extraprop.h  pg_util.h  popupmenu.h  preferencesdialog.h  rowsselectiondialog.h  runscript.h  saveconfigurationdialog.h  saveimagedialog.h  sequencedriver.h  sessionsaver.h  sessionselectiondialog.h  timelinetreeselector.h  traceinformationdialog.h  tutorialsdownload.h  windows_tree.h  wxparaverapp.h
m4/: ax_check_openssl.m4  m4_ax_boost_base.m4  m4_ax_boost_serialization.m4  macros.m4
src/: Makefile.am  advancedsaveconfiguration.cpp  autosessionmanager.cpp  connection.cpp  copypaste.cpp  cutfilterdialog.cpp  derivedtimelinedialog.cpp  eventsselectiondialog.cpp  exitdialog.cpp  filebrowserbutton.cpp  filedialogext.cpp  finddialog.cpp  ghistogram.cpp  glviewercanvas.cpp  gtimeline.cpp  helpcontents.cpp  histogramdialog.cpp  histotablebase.cpp  loadcfgdialog.cpp  paravermain.cpp  pg_extraprop.cpp  pg_util.cpp  popupmenu.cpp  preferencesdialog.cpp  rowsselectiondialog.cpp  runscript.cpp  saveconfigurationdialog.cpp  saveimagedialog.cpp  sequencedriver.cpp  sessionsaver.cpp  sessionselectiondialog.cpp  timelinetreeselector.cpp  traceinformationdialog.cpp  tutorialsdownload.cpp  windows_tree.cpp  wxparaverapp.cpp
