
noinst_HEADERS =    advancedsaveconfiguration.h \
                    connection.h \
                    copypaste.h \
                    cutfilterdialog.h \
                    derivedtimelinedialog.h \
                    eventsselectiondialog.h \
                    exitdialog.h \
                    filebrowserbutton.h \
                    filedialogext.h \
                    finddialog.h \
                    ghistogram.h \
                    gtimeline.h \
                    helpcontents.h \
                    histogramdialog.h \
                    histotablebase.h \
                    loadcfgdialog.h \
                    paravermain.h \
                    pg_extraprop.h \
                    pg_util.h \
                    popupmenu.h \
                    preferencesdialog.h \
                    rowsselectiondialog.h \
                    runscript.h \
                    saveconfigurationdialog.h \
                    sequencedriver.h \
                    sessionsaver.h \
                    sessionselectiondialog.h \
                    timelinetreeselector.h \
                    tutorialsdownload.h \
                    windows_tree.h \
                    wxparaverapp.h
