
bin_PROGRAMS = wxparaver.bin

wxparaver_bin_SOURCES = advancedsaveconfiguration.cpp \
                    connection.cpp \
                    copypaste.cpp \
                    cutfilterdialog.cpp \
                    derivedtimelinedialog.cpp \
                    eventsselectiondialog.cpp \
                    filebrowserbutton.cpp \
                    filedialogext.cpp \
                    finddialog.cpp \
                    ghistogram.cpp \
                    gtimeline.cpp \
                    helpcontents.cpp \
                    histogramdialog.cpp \
                    histotablebase.cpp \
                    paravermain.cpp \
                    pg_extraprop.cpp \
                    pg_util.cpp \
                    popupmenu.cpp \
                    preferencesdialog.cpp \
                    rowsselectiondialog.cpp \
                    runscript.cpp \
                    saveconfigurationdialog.cpp \
                    sequencedriver.cpp \
                    sessionsaver.cpp \
                    windows_tree.cpp \
                    wxparaverapp.cpp 


wxparaver_bin_LDADD = @LIBS@ @PROPGRID_LIBS@ -lparaver-kernel -lparaver-api
wxparaver_bin_CXXFLAGS = @CXXFLAGS@

