
bin_PROGRAMS = wxparaver.bin

wxparaver_bin_SOURCES = advancedsaveconfiguration.cpp \
                    connection.cpp \
                    copypaste.cpp \
                    cutfilterdialog.cpp \
                    derivedtimelinedialog.cpp \
                    eventsselectiondialog.cpp \
                    exitdialog.cpp \
                    filebrowserbutton.cpp \
                    filedialogext.cpp \
                    finddialog.cpp \
                    ghistogram.cpp \
                    gtimeline.cpp \
                    helpcontents.cpp \
                    histogramdialog.cpp \
                    histotablebase.cpp \
                    loadcfgdialog.cpp \
                    paravermain.cpp \
                    pg_extraprop.cpp \
                    pg_util.cpp \
                    popupmenu.cpp \
                    preferencesdialog.cpp \
                    rowsselectiondialog.cpp \
                    runscript.cpp \
                    saveconfigurationdialog.cpp \
                    saveimagedialog.cpp \
                    sequencedriver.cpp \
                    sessionsaver.cpp \
                    sessionselectiondialog.cpp \
                    timelinetreeselector.cpp \
                    traceinformationdialog.cpp \
                    tutorialsdownload.cpp \
                    windows_tree.cpp \
                    wxparaverapp.cpp 


wxparaver_bin_LDADD = @LIBS@ -lparaver-api -lparaver-kernel

